--- a/css/style.scss
+++ b/css/style.scss
@@ -22,7 +22,7 @@ h1, h2 { color: #37474F; font-family: 'Orbitron', sans-serif; }
 
 #button_wrap { position: fixed; right: 0; top: 0; padding-top: 15px; padding-right: 30px; font-size: 30px; z-index: 1000; }
 
-.contact_icon img { width: 16%; margin: 0 20px; cursor: pointer; }
+.contact_icon img { width: 16%; margin: 0 10px; cursor: pointer; }
 
 #contact_wrap { position: absolute; left: 0; top: 0; padding-top: 20px; text-align: left; padding-left: 20px; width: 70%; }
 
@@ -115,7 +115,7 @@ footer { text-align: center; }
 
 
 @media screen and (min-width: 600px) and (max-width: 899px) {
-	.contact_icon img { width: 7%; margin: 0 10px; cursor: pointer; }
+	.contact_icon img { width: 7%; cursor: pointer; }
 	#metadata { top: 650px; height: 70%; cursor: pointer; }
 	#intro_logo { width: 80%; }
 	.instructions span { color: $meinnovation-black; }
@@ -127,7 +127,7 @@ footer { text-align: center; }
 
 @media screen and (min-width: 900px) and (max-width: 1034px) {
 	body { font-size: 18px; }
-	.contact_icon img { width: 6%; margin: 0 10px; cursor: pointer; }
+	.contact_icon img { width: 6%; cursor: pointer; }
 	#intro_logo { width: 70%; }
 	#intro_logo_wrap p { font-size: 60px; }
 	aside { padding: 20px; font-size: 50px; width: 40%; }
@@ -151,7 +151,7 @@ footer { text-align: center; }
 
 @media screen and (min-width: 1035px) and (max-width: 1199px) {
 	body { font-size: 18px; }
-	.contact_icon img { width: 6%; margin: 0 10px; cursor: pointer; }
+	.contact_icon img { width: 6%; cursor: pointer; }
 	#intro_logo { width: 70%; }
 	#intro_logo_wrap p { font-size: 60px; }
 	aside { padding: 20px; font-size: 50px; width: 40%; }
@@ -175,7 +175,7 @@ footer { text-align: center; }
 
 @media screen and (min-width: 1200px) {
 	body { font-size: 18px; }
-	.contact_icon img { width: 5%; margin: 0 10px; cursor: pointer; }
+	.contact_icon img { width: 5%; cursor: pointer; }
 	#intro_logo { width: 60%; }
 	#intro_logo_wrap p { font-size: 80px; }
 	aside { padding: 20px; font-size: 60px; width: 30%; }
@@ -201,7 +201,7 @@ footer { text-align: center; }
 	aside { background-color: $meinnovation-ltgray; color: #37474F; padding: 20px 30px; font-size: 30px; visibility: hidden; opacity: 0; position: fixed; top: 0; right: 0; width: 100%; z-index: 500; }
 	#nav_links { text-align: center; }
 	#nav_links li { display: inline; margin: 20px; }
-	#metadata { height: 100%; top: 850px; }
+	#metadata { height: 130%; top: 850px; }
 }
 
 @media screen and (max-height: 399px) and (max-width: 1029px) {
